--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Added for premake builds
+_build
+_output
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
